force-app/main/default/objects/EmailTemplate__c/EmailTemplate__c.object-meta.xml
<CustomObject>
    <description>Stores email templates for marketing campaigns</description>
    <label>Email Template</label>
    <pluralLabel>Email Templates</pluralLabel>
</CustomObject>