force-app/main/default/objects/EmailTemplate__c/fields/HtmlContent__c.field-meta.xml
<CustomField>
    <fullName>HtmlContent__c</fullName>
    <label>HTML Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>