force-app/main/default/objects/EmailTemplate__c/fields/SubjectLine__c.field-meta.xml
<CustomField>
    <fullName>SubjectLine__c</fullName>
    <label>Subject Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>